hphp/hack/test/typecheck/match_statement/bad/refinement_pattern_wildcard_invalid_name.php.exp
File "refinement_pattern_wildcard_invalid_name.php", line 7, characters 5-15:
Wildcard patterns must begin with the `_` character. To bind a variable, use a `$` character (`$unused`). (Parsing[1002])
